[#338] Change get_links() API to use link filters instead of optional parameters
[das-atom-db#216] Removed cursor from api of get_matched*() and get_incoming_links()
[HOTFIX] Fixes after DAS api change in atom-db/#216
[das/#106] Change patterns and templates indexes to store handles only rather than handles+targets